  * moved config classes to namespace Server.Config
  * Config.GameServerList implements IEnumerable
  * all unsafe code replaced with managed implementations
  * added property Mobile.LastCombatTime
  * added interface IGold
  * optimized memory allocations during world load
  * World.LoadingType is fed from Entity.GetType().FullName
  * login: use proprietary timestamp format for now
  * login: initialize all columns
  * login: print name of failed game server
  * login: log account creation
  * debian: symlink base/Data to /etc/sunuo
  * debian: symlink base/var/log to /var/log/sunuo
  * debian: install SunUO.exe.config in /etc/sunuo/
  * debian: install third party libraries in /usr/share/sunuo/
  * debian: start SunUO in service mode
  * debian: support multiple shards
  * debian: recommend runuo-skeleton and sunuo-legacy-scripts
  * debian: removed runuo-installer

 --

sunuo (0.2.3) unstable; urgency=low

  * explicitly ignore HardwareInfo packets

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 16:25:41 +0100

sunuo (0.2.2) unstable; urgency=low

  * don't use nested Makefiles
  * distribute Mysql.Data.dll and Npgsql.dll
  * SunLogin responds to UOG queries

 -- Max Kellermann <max@duempel.org>  Mon, 19 Dec 2005 15:59:06 +0100

sunuo (0.2.1) unstable; urgency=low

  * ignore misconfiguration in Scripts/Misc/DataPath.cs, just like RunUO
    does
  * implemented a stripped down SunUO server as login server, with account
    database in ODBC
  * ExtendedCommand does its own in-game check, removed requirement
  * added ExtendedCommand 0x5555 which will serve as container for our
    protocol extensions
  * configuration option for "super clients"
  * login server can send auth ID to game servers

 -- Max Kellermann <max@duempel.org>  Fri, 16 Dec 2005 15:51:13 +0100

sunuo (0.2.0) unstable; urgency=low

  * make NetState.PacketEncoder non-static (patch from Sebastian Hartte)
  * added RunUO-Encryption-2.1.zip to core (from Sebastian Hartte)