@@ -65,7 +65,7 @@ namespace Server
 	{
 		private DateTime m_Expire;
 
-		public TimedSkillMod( SkillName skill, bool relative, double value, TimeSpan delay ) : this( skill, relative, value, DateTime.Now + delay )
+		public TimedSkillMod( SkillName skill, bool relative, double value, TimeSpan delay ) : this( skill, relative, value, Core.Now + delay )
 		{
 		}
 
@@ -76,7 +76,7 @@ namespace Server
 
 		public override bool CheckCondition()
 		{
-			return ( DateTime.Now < m_Expire );
+			return ( Core.Now < m_Expire );
 		}
 	}
 
@@ -119,7 +119,7 @@ namespace Server
 		public Mobile Damager{ get{ return m_Damager; } }
 		public int DamageGiven{ get{ return m_DamageGiven; } set{ m_DamageGiven = value; } }
 		public DateTime LastDamage{ get{ return m_LastDamage; } set{ m_LastDamage = value; } }
-		public bool HasExpired{ get{ return (DateTime.Now > (m_LastDamage + m_ExpireDelay)); } }
+		public bool HasExpired{ get{ return (Core.Now > (m_LastDamage + m_ExpireDelay)); } }
 		public ArrayList Responsible{ get{ return m_Responsible; } set{ m_Responsible = value; } }
 
 		private static TimeSpan m_ExpireDelay = TimeSpan.FromMinutes( 2.0 );
@@ -360,7 +360,7 @@ namespace Server
 			if ( m_Duration == TimeSpan.Zero )
 				return false;
 
-			return (DateTime.Now - m_Added) >= m_Duration;
+			return (Core.Now - m_Added) >= m_Duration;
 		}
 
 		public StatMod( StatType type, string name, int offset, TimeSpan duration )
@@ -369,7 +369,7 @@ namespace Server
 			m_Name = string.Intern(name);
 			m_Offset = offset;
 			m_Duration = duration;
-			m_Added = DateTime.Now;
+			m_Added = Core.Now;
 		}
 	}
 
@@ -624,7 +624,7 @@ namespace Server
 
 			public bool Expired()
 			{
-				bool v = ( DateTime.Now >= m_End );
+				bool v = ( Core.Now >= m_End );
 
 				if ( v )
 					m_InstancePool.Enqueue( this );
@@ -1235,7 +1235,7 @@ namespace Server
 			if ( m_Warmode == value )
 				return;
 
-			DateTime now = DateTime.Now, next = m_NextWarmodeChange;
+			DateTime now = Core.Now, next = m_NextWarmodeChange;
 
 			if ( now > next || m_WarmodeChanges == 0 )
 			{
@@ -1749,20 +1749,20 @@ namespace Server
 
 		public virtual void SendSkillMessage()
 		{
-			if ( DateTime.Now < m_NextActionMessage )
+			if ( Core.Now < m_NextActionMessage )
 				return;
 
-			m_NextActionMessage = DateTime.Now + m_ActionMessageDelay;
+			m_NextActionMessage = Core.Now + m_ActionMessageDelay;
 
 			SendLocalizedMessage( 500118 ); // You must wait a few moments to use another skill.
 		}
 
 		public virtual void SendActionMessage()
 		{
-			if ( DateTime.Now < m_NextActionMessage )
+			if ( Core.Now < m_NextActionMessage )
 				return;
 
-			m_NextActionMessage = DateTime.Now + m_ActionMessageDelay;
+			m_NextActionMessage = Core.Now + m_ActionMessageDelay;
 
 			SendLocalizedMessage( 500119 ); // You must wait to perform another action.
 		}
@@ -1927,7 +1927,7 @@ namespace Server
 
 			protected override void OnTick()
 			{
-				if ( DateTime.Now > m_Mobile.m_NextCombatTime )
+				if ( Core.Now > m_Mobile.m_NextCombatTime )
 				{
 					Mobile combatant = m_Mobile.Combatant;
 
@@ -1946,7 +1946,7 @@ namespace Server
 					if ( m_Mobile.InLOS( combatant ) )
 					{
 						m_Mobile.RevealingAction();
-						m_Mobile.m_NextCombatTime = DateTime.Now + weapon.OnSwing( m_Mobile, combatant );
+						m_Mobile.m_NextCombatTime = Core.Now + weapon.OnSwing( m_Mobile, combatant );
 					}
 				}
 			}
@@ -2725,7 +2725,7 @@ namespace Server
 			if ( m_MoveRecords != null && m_MoveRecords.Count > 0 )
 				m_MoveRecords.Clear();
 
-			m_EndQueue = DateTime.Now;
+			m_EndQueue = Core.Now;
 		}
 
 		public virtual bool CheckMovement( Direction d, out int newZ )
@@ -2908,14 +2908,14 @@ namespace Server
 						if ( m_MoveRecords.Count > 0 )
 							end = m_EndQueue + delay;
 						else
-							end = DateTime.Now + delay;
+							end = Core.Now + delay;
 
 						m_MoveRecords.Enqueue( MovementRecord.NewInstance( end ) );
 
 						m_EndQueue = end;
 					}
 
-					m_LastMoveTime = DateTime.Now;
+					m_LastMoveTime = Core.Now;
 					newLocation = new Point3D( x, y, newZ );
 				}
 				else
@@ -3107,7 +3107,7 @@ namespace Server
 			{
 				for ( int i = 0; i < m_StuckMenuUses.Length; ++i )
 				{
-					if ( (DateTime.Now - m_StuckMenuUses[i]) > TimeSpan.FromDays( 1.0 ) )
+					if ( (Core.Now - m_StuckMenuUses[i]) > TimeSpan.FromDays( 1.0 ) )
 					{
 						return true;
 					}
@@ -3846,7 +3846,7 @@ namespace Server
 			Mobile from = this;
 			NetState state = m_NetState;
 
-			if ( from.AccessLevel >= AccessLevel.GameMaster || DateTime.Now >= from.NextActionTime )
+			if ( from.AccessLevel >= AccessLevel.GameMaster || Core.Now >= from.NextActionTime )
 			{
 				if ( from.CheckAlive() )
 				{
@@ -3953,7 +3953,7 @@ namespace Server
 							if ( liftSound != -1 )
 								from.Send( new PlaySound( liftSound, from ) );
 
-							from.NextActionTime = DateTime.Now + TimeSpan.FromSeconds( 0.5 );
+							from.NextActionTime = Core.Now + TimeSpan.FromSeconds( 0.5 );
 
 							if ( fixMap != null && shouldFix )
 								fixMap.FixColumn( fixLoc.m_X, fixLoc.m_Y );
@@ -4579,7 +4579,7 @@ namespace Server
 				de = new DamageEntry( from );
 
 			de.DamageGiven += amount;
-			de.LastDamage = DateTime.Now;
+			de.LastDamage = Core.Now;
 
 			m_DamageEntries.Remove( de );
 			m_DamageEntries.Add( de );
@@ -4610,7 +4610,7 @@ namespace Server
 					list.Add( resp = new DamageEntry( master ) );
 
 				resp.DamageGiven += amount;
-				resp.LastDamage = DateTime.Now;
+				resp.LastDamage = Core.Now;
 			}
 
 			return de;
@@ -4821,9 +4821,9 @@ namespace Server
 
 			for ( int i = 0; i < m_StuckMenuUses.Length; ++i )
 			{
-				if ( (DateTime.Now - m_StuckMenuUses[i]) > TimeSpan.FromDays( 1.0 ) )
+				if ( (Core.Now - m_StuckMenuUses[i]) > TimeSpan.FromDays( 1.0 ) )
 				{
-					m_StuckMenuUses[i] = DateTime.Now;
+					m_StuckMenuUses[i] = Core.Now;
 					return;
 				}
 			}
@@ -8973,7 +8973,7 @@ namespace Server
 			m_DamageEntries = new ArrayList( 1 );
 
 			m_NextSkillTime = DateTime.MinValue;
-			m_CreationTime = DateTime.Now;
+			m_CreationTime = Core.Now;
 		}
 
 		private static Queue m_DeltaQueue = new Queue();
