@@ -445,10 +445,10 @@ namespace Server
 			}
 			catch ( EndOfStreamException )
 			{
-				if ( DateTime.Now >= m_NextStaticWarning )
+				if ( Core.Now >= m_NextStaticWarning )
 				{
 					Console.WriteLine( "Warning: Static EOS for {0} ({1}, {2})", m_Owner, x, y );
-					m_NextStaticWarning = DateTime.Now + TimeSpan.FromMinutes( 1.0 );
+					m_NextStaticWarning = Core.Now + TimeSpan.FromMinutes( 1.0 );
 				}
 
 				return m_EmptyStaticBlock;
@@ -482,10 +482,10 @@ namespace Server
 			}
 			catch
 			{
-				if ( DateTime.Now >= m_NextLandWarning )
+				if ( Core.Now >= m_NextLandWarning )
 				{
 					Console.WriteLine( "Warning: Land EOS for {0} ({1}, {2})", m_Owner, x, y );
-					m_NextLandWarning = DateTime.Now + TimeSpan.FromMinutes( 1.0 );
+					m_NextLandWarning = Core.Now + TimeSpan.FromMinutes( 1.0 );
 				}
 
 				return m_InvalidLandBlock;
