@@ -34,6 +34,7 @@ sunuo (0.3.0) unstable; urgency=low
   * added interface IGold
   * optimized memory allocations during world load
   * World.LoadingType is fed from Entity.GetType().FullName
+  * cache DateTime.Now
   * login: use proprietary timestamp format for now
   * login: initialize all columns
   * login: print name of failed game server
